[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/background_plain.png" type="Texture" id=1]
[ext_resource path="res://themes/custom_theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/Configuration_Menu.gd" type="Script" id=3]
[ext_resource path="res://scripts/KeyBinding_Button.gd" type="Script" id=4]
[ext_resource path="res://sounds/BoxCat-Games-Epic-Song.mp3" type="AudioStream" id=5]

[node name="configuration_menu" type="Node2D"]
script = ExtResource( 3 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="Back_Button" type="Button" parent="."]
margin_left = 1500.0
margin_top = 850.0
margin_right = 1800.0
margin_bottom = 1000.0
theme = ExtResource( 2 )
text = "Back"

[node name="HSeparator" type="HSeparator" parent="."]
margin_left = 20.0
margin_top = 60.0
margin_right = 847.0
margin_bottom = 101.0

[node name="general_configuration_title" type="Label" parent="."]
margin_left = 61.0
margin_top = 82.0
margin_right = 187.0
margin_bottom = 122.0
theme = ExtResource( 2 )
text = "General:"

[node name="server_ip_label" type="Label" parent="."]
margin_left = 91.0
margin_top = 127.0
margin_right = 217.0
margin_bottom = 167.0
theme = ExtResource( 2 )
text = "Server IP:"

[node name="server_ip_LineEdit" type="LineEdit" parent="."]
margin_left = 311.0
margin_top = 125.0
margin_right = 572.0
margin_bottom = 163.0

[node name="server_port_label" type="Label" parent="."]
margin_left = 89.0
margin_top = 171.0
margin_right = 282.0
margin_bottom = 211.0
theme = ExtResource( 2 )
text = "Server port:"

[node name="server_port_LineEdit" type="LineEdit" parent="."]
margin_left = 311.0
margin_top = 171.0
margin_right = 572.0
margin_bottom = 209.0

[node name="HSeparator2" type="HSeparator" parent="."]
margin_left = 19.0
margin_top = 232.0
margin_right = 846.0
margin_bottom = 273.0

[node name="sound_configuration_title" type="Label" parent="."]
margin_left = 60.0
margin_top = 254.0
margin_right = 186.0
margin_bottom = 294.0
theme = ExtResource( 2 )
text = "Sound:"

[node name="sound_volume_label" type="Label" parent="."]
margin_left = 86.0
margin_top = 306.0
margin_right = 302.0
margin_bottom = 346.0
theme = ExtResource( 2 )
text = "Sound Volume:"

[node name="sound_volume_HSlider" type="HSlider" parent="."]
margin_left = 311.0
margin_top = 317.0
margin_right = 572.0
margin_bottom = 333.0

[node name="sound_volume_value" type="Label" parent="."]
margin_left = 599.0
margin_top = 308.0
margin_right = 648.0
margin_bottom = 346.0
theme = ExtResource( 2 )
text = "0"

[node name="HSeparator3" type="HSeparator" parent="."]
margin_left = 26.0
margin_top = 424.0
margin_right = 853.0
margin_bottom = 465.0

[node name="key_bindings_title" type="Label" parent="."]
margin_left = 67.0
margin_top = 446.0
margin_right = 258.0
margin_bottom = 486.0
theme = ExtResource( 2 )
text = "Key bindings:"

[node name="move_left_binding_label" type="Label" parent="."]
margin_left = 97.0
margin_top = 495.0
margin_right = 287.0
margin_bottom = 535.0
theme = ExtResource( 2 )
text = "Move left:"

[node name="Move_left_Button" type="Button" parent="." groups=["button_keys"]]
margin_left = 342.0
margin_top = 492.0
margin_right = 442.0
margin_bottom = 532.0
theme = ExtResource( 2 )
text = "A"
script = ExtResource( 4 )
action_name = "move_left"

[node name="move_up_binding_label" type="Label" parent="."]
margin_left = 97.0
margin_top = 555.0
margin_right = 287.0
margin_bottom = 595.0
theme = ExtResource( 2 )
text = "Move Up:"

[node name="Move_up_Button" type="Button" parent="." groups=["button_keys"]]
margin_left = 342.0
margin_top = 552.0
margin_right = 442.0
margin_bottom = 592.0
theme = ExtResource( 2 )
text = "W"
script = ExtResource( 4 )
action_name = "move_up"

[node name="move_down_binding_label" type="Label" parent="."]
margin_left = 97.0
margin_top = 615.0
margin_right = 287.0
margin_bottom = 655.0
theme = ExtResource( 2 )
text = "Move down:"

[node name="Move_down_Button" type="Button" parent="." groups=["button_keys"]]
margin_left = 342.0
margin_top = 612.0
margin_right = 442.0
margin_bottom = 652.0
theme = ExtResource( 2 )
text = "S"
script = ExtResource( 4 )
action_name = "move_down"

[node name="move_right_binding_label" type="Label" parent="."]
margin_left = 97.0
margin_top = 675.0
margin_right = 287.0
margin_bottom = 715.0
theme = ExtResource( 2 )
text = "Move right:"

[node name="Move_right_Button" type="Button" parent="." groups=["button_keys"]]
margin_left = 342.0
margin_top = 672.0
margin_right = 442.0
margin_bottom = 712.0
theme = ExtResource( 2 )
text = "D"
script = ExtResource( 4 )
action_name = "move_right"

[node name="shoot_binding_label" type="Label" parent="."]
margin_left = 97.0
margin_top = 735.0
margin_right = 287.0
margin_bottom = 775.0
theme = ExtResource( 2 )
text = "Shoot:"

[node name="Shoot_Button" type="Button" parent="." groups=["button_keys"]]
margin_left = 342.0
margin_top = 732.0
margin_right = 442.0
margin_bottom = 772.0
theme = ExtResource( 2 )
text = "SPACE"
script = ExtResource( 4 )
action_name = "shoot"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="pressed" from="Back_Button" to="." method="_on_Back_Button_pressed"]
[connection signal="focus_exited" from="server_ip_LineEdit" to="." method="_on_server_ip_LineEdit_focus_exited"]
[connection signal="focus_exited" from="server_port_LineEdit" to="." method="_on_server_port_LineEdit_focus_exited"]
[connection signal="focus_exited" from="sound_volume_HSlider" to="." method="_on_sound_volume_HSlider_focus_exited"]
[connection signal="value_changed" from="sound_volume_HSlider" to="." method="_on_sound_volume_HSlider_value_changed"]
